# templite

./: README.md  pyproject.toml
templite/: templite.py
tests/: test_templite.py
