[tool.poetry]
name = "templite"
version = "0.1.0"
description = ""
authors = ["revupst <revup123456@gmail.com>"]
readme = "README.md"
packages = [{ include = "templite" }]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
